patch for fedora mariadb

--- a/integration/scripts/files/trove-guest.systemd.conf
+++ b/integration/scripts/files/trove-guest.systemd.conf
@@ -10,6 +10,10 @@ Group=GUEST_USERNAME
 
 ExecStartPre=/bin/bash -c "sudo mkdir -p GUEST_LOGDIR ; sudo chown GUEST_USERNAME:root GUEST_LOGDIR"
 
+ExecStartPre=/bin/bash -c "sudo mkdir -p /etc/mysql/conf.d ; sudo ln -s /etc/my.cnf.d/* /etc/mysql/conf.d"
+
+
+
 # If ~/trove-installed does not exist, copy the trove source from
 # the user's development environment, then touch the sentinel file
 ExecStartPre=/bin/bash -c "test -d /home/GUEST_USERNAME/trove-installed || sudo -u GUEST_USERNAME rsync -e 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no' -avz --exclude='.*' HOST_SCP_USERNAME@CONTROLLER_IP:PATH_TROVE/ /home/GUEST_USERNAME/trove && touch /home/GUEST_USERNAME/trove-installed"
