added patch for rsync

--- a/integration/scripts/files/trove-guest.systemd.conf
+++ b/integration/scripts/files/trove-guest.systemd.conf
@@ -16,7 +16,7 @@ ExecStartPre=/bin/bash -c "sudo mkdir -p /etc/mysql/conf.d ; sudo ln -s /etc/my.
 
 # If ~/trove-installed does not exist, copy the trove source from
 # the user's development environment, then touch the sentinel file
-ExecStartPre=/bin/bash -c "test -d /home/GUEST_USERNAME/trove-installed || sudo -u GUEST_USERNAME rsync -e 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no' -avz --exclude='.*' HOST_SCP_USERNAME@CONTROLLER_IP:PATH_TROVE/ /home/GUEST_USERNAME/trove && touch /home/GUEST_USERNAME/trove-installed"
+ExecStartPre=/bin/bash -c "for((i=1;i<=10;i+=1)); do "test -d /home/GUEST_USERNAME/trove-installed || sudo -u GUEST_USERNAME rsync -e 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no' -avz --exclude='.*' HOST_SCP_USERNAME@CONTROLLER_IP:PATH_TROVE/ /home/GUEST_USERNAME/trove && touch /home/GUEST_USERNAME/trove-installed || true" ; done
 
 # If /etc/trove does not exist, create it and then copy the trove-guestagent.conf
 # from /etc/trove on the user's development environment,
