--- a/integration/scripts/files/trove-guest.systemd.conf
+++ b/integration/scripts/files/trove-guest.systemd.conf
@@ -15,7 +15,7 @@ ExecStartPre=/bin/bash -c "sudo mkdir -p GUEST_LOGDIR ; sudo chown GUEST_USERNAM
 # If ~/trove-installed does not exist, copy the trove source from
 # the user's development environment, then touch the sentinel file
 
-ExecStartPre=/bin/bash -c "for((i=1;i<=10;i+=1)); do test -d /home/ubuntu/trove-installed || sudo -u ubuntu rsync -e 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no' -avz --exclude='.*' vagrant@69.197.163.75:/home/vagrant/trove// /home/ubuntu/trove && touch /home/ubuntu/trove-installed || true ; done"
+ExecStartPre=/bin/bash -c "for((i=1;i<=10;i+=1)); do test -d /home/ubuntu/trove-installed || sudo -u ubuntu rsync -e 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no' -avz --exclude='.*' HOST_SCP_USERNAME@CONTROLLER_IP:/home/vagrant/trove// /home/ubuntu/trove && touch /home/ubuntu/trove-installed || true ; done"
 
 
 # If /etc/trove does not exist, create it and then copy the trove-guestagent.conf
